add_executable(
    block_shared_memory
    block_shared_memory.cu
)

add_executable(
    matmul_smem
    matmul_smem.cu
)

add_executable(
    shared_memory
    shared_memory.cu
)

add_executable(
    smem_analysis
    smem_analysis.cu
)

add_executable(
    matmul_smem_dynamic
    matmul_smem_dynamic.cu
)

# add_executable(
#     blockcluster_shared_memory
#     blockcluster_shared_memory.cu
# )

